WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198900
[LFC][IFC] Completely collapsed runs should not go to the trimmable run list.
https://bugs.webkit.org/show_bug.cgi?id=198900
Summary
[LFC][IFC] Completely collapsed runs should not go to the trimmable run list.
alan
Reported
2019-06-15 20:10:00 PDT
they are collapsed.
Attachments
Patch
(2.05 KB, patch)
2019-06-15 20:19 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-15 20:10:24 PDT
<
rdar://problem/51782156
>
alan
Comment 2
2019-06-15 20:19:16 PDT
Created
attachment 372213
[details]
Patch
WebKit Commit Bot
Comment 3
2019-06-16 12:30:21 PDT
Comment on
attachment 372213
[details]
Patch Clearing flags on attachment: 372213 Committed
r246476
: <
https://trac.webkit.org/changeset/246476
>
WebKit Commit Bot
Comment 4
2019-06-16 12:30:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug