[LFC][IFC] Completely collapsed runs should not go to the trimmable run list. https://bugs.webkit.org/show_bug.cgi?id=198900 <rdar://problem/51782156>

Reviewed by Antti Koivisto.

* layout/inlineformatting/InlineLine.cpp:
(WebCore::Layout::Line::trailingTrimmableWidth const):
(WebCore::Layout::Line::appendTextContent):


Canonical link: https://commits.webkit.org/212868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246476 268f45cc-cd09-0410-ab3c-d52691b4dbfc